feat: Support user-supplied sidecars for SGCluster pods